sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value pos
	while (pos < getNombreValeurs-1) {	
               ^