sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var i:Int = 0
	
	while (pos < getNombreValeurs-1) {	
		if (plusPetit(i,i-1)) {
			echange(i-1,i)
			if (i > 0)
				i = i-1
		} else
			i = i+1
	}
}
